# ai-agents

./: .gitignore  Makefile  README.md  pyproject.toml
agents/devops-assistant/: pyproject.toml
agents/kafka-health/: pyproject.toml
agents/kafka-health/kafka_health_agent/: agent.py  tools.py
core/: pyproject.toml
core/ai_agents_core/: __init__.py  base.py
kafka-health-agent/: README.md  docker-compose.yml  pyproject.toml
kafka-health-agent/kafka_health_agent/: agent.py
tests/: conftest.py  test_audit.py  test_config.py  test_guardrails.py
